# claude-codex-usage

./: README.md  index.html  package-lock.json  package.json
docs/: api-discovery.md
docs/plans/: 2026-02-19-notifications-settings-build-design.md  2026-02-19-notifications-settings-build-plan.md  CLAUDE.md
src/: App.tsx  styles.css
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: CLAUDE.md  codex_fetcher.rs  cookie_reader.rs  lib.rs  main.rs  notifications.rs  openrouter_fetcher.rs  openrouter_keychain.rs  settings.rs  usage_fetcher.rs
src/components/: ExtraUsage.tsx  SettingsModal.css  SettingsModal.tsx  UsageBar.css  UsageBar.tsx  UsagePanel.css  UsagePanel.tsx
